--- a/platforms/browser/www/css/custom.css
+++ b/platforms/browser/www/css/custom.css
@@ -4,58 +4,64 @@
 |------------------------------------------------------------------------------
 */
 
-.page[data-name=splash-screen] .splash {
-	align-items: center;
-	background-color: #0fc874;
-    background: linear-gradient(to bottom, #02cc86 0%, #08c878 40%, #01b44e 150%), linear-gradient(to top, rgba(255, 255, 255, 0.40) 0%, rgba(0, 0, 0, 0.25) 200%);
-	background-blend-mode: multiply;
-	box-sizing: border-box;
-	display: flex;
-	flex-direction: column;
-	height: 100%;
-	justify-content: space-around;
-	overflow: hidden;
-	padding: 16px;
-	text-align: center;
+.page[data-name="splash-screen"] .splash {
+  align-items: center;
+  background: #fff;
+  /* background-color: #0fc874;
+  background: linear-gradient(to bottom, #02cc86 0%, #08c878 40%, #01b44e 150%),
+    linear-gradient(
+      to top,
+      rgba(255, 255, 255, 0.4) 0%,
+      rgba(0, 0, 0, 0.25) 200%
+    );
+  background-blend-mode: multiply; */
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-around;
+  overflow: hidden;
+  padding: 16px;
+  text-align: center;
 }
 
-.page[data-name=splash-screen] .splash .splash-media {
-	margin: 32px 0;
-	padding: 0 16px;
+.page[data-name="splash-screen"] .splash .splash-media {
+  margin: 32px 0;
+  padding: 0 16px;
 }
 
-.page[data-name=splash-screen] .splash-media .logo {
-	height: 340px;
-	width: auto;
+.page[data-name="splash-screen"] .splash-media .logo {
+  height: 340px;
+  width: auto;
 }
 
-.page[data-name=splash-screen] .splash-media .logo * {
-	fill-opacity: 0;
-	opacity: 0;
-	stroke-width: 10px;
+.page[data-name="splash-screen"] .splash-media .logo * {
+  fill-opacity: 0;
+  opacity: 0;
+  stroke-width: 10px;
   transition: fill-opacity 1s;
 }
 
-.page[data-name=splash-screen] .splash-media .logo.animation-begin * {
-	opacity: 1;
+.page[data-name="splash-screen"] .splash-media .logo.animation-begin * {
+  opacity: 1;
 }
 
-.page[data-name=splash-screen] .splash-media .logo.animation-finish * {
+.page[data-name="splash-screen"] .splash-media .logo.animation-finish * {
   fill-opacity: 1;
-	stroke-width: 1px;
+  stroke-width: 1px;
 }
 
-.page[data-name=splash-screen] .splash .splash-preloader {
-	margin: 32px 0;
-	opacity: 1;
-	padding: 0 16px;
-	transition: opacity 1s;
+.page[data-name="splash-screen"] .splash .splash-preloader {
+  margin: 32px 0;
+  opacity: 1;
+  padding: 0 16px;
+  transition: opacity 1s;
 }
 
-.page[data-name=splash-screen] .splash-preloader .preloader {
-	height: 32px;
-	width: 32px;
-	color:white
+.page[data-name="splash-screen"] .splash-preloader .preloader {
+  height: 32px;
+  width: 32px;
+  color: #0fc874;
 }
 
 /*
@@ -64,104 +70,100 @@
 |------------------------------------------------------------------------------
 */
 
-
-.page[data-name=walkthrough] .walkthrough {
-	height: 100%;
-	align-items: center;
-	background-color: #fff;
-	background-image:url("../assets/img/7178884.png");
-	background-repeat: no-repeat;
-	background-position:50% 86%;
-	background-size:contain;
-	
+.page[data-name="walkthrough"] .walkthrough {
+  height: 100%;
+  align-items: center;
+  background-color: #fff;
+  background-image: url("../assets/img/7178884.png");
+  background-repeat: no-repeat;
+  background-position: 50% 86%;
+  background-size: contain;
 }
-.page[data-name=walkthrough] .walkthrough:before {
-	height: 100%;
-	width:100%;
-	content: '';
-	display: block;
-	left: 0;
-	position: absolute;
-	top: 0;
-	background:rgba(255,255,255,0.21);
-	z-index:1;
-	
+.page[data-name="walkthrough"] .walkthrough:before {
+  height: 100%;
+  width: 100%;
+  content: "";
+  display: block;
+  left: 0;
+  position: absolute;
+  top: 0;
+  background: rgba(255, 255, 255, 0.21);
+  z-index: 1;
 }
-.page[data-name=walkthrough] .walkthrough:after {
-	height: 100%;
-	width:100%;
-	content: '';
-	display: block;
-	left: 0;
-	position: absolute;
-	top: 0;
-	background:rgba(255,255,255,0.21);
-	z-index:1;
-	
+.page[data-name="walkthrough"] .walkthrough:after {
+  height: 100%;
+  width: 100%;
+  content: "";
+  display: block;
+  left: 0;
+  position: absolute;
+  top: 0;
+  background: rgba(255, 255, 255, 0.21);
+  z-index: 1;
 }
-.page[data-name=walkthrough] .walkthrough-container {
-	align-items: center;
-	display: flex;
-	flex-direction: column;
-	height: 100%;
-	justify-content: flex-start;
-	text-align: center;
-	z-index:99;
+.page[data-name="walkthrough"] .walkthrough-container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: flex-start;
+  text-align: center;
+  z-index: 99;
 }
 
-.page[data-name=walkthrough] .walkthrough-slide {
-	box-sizing: border-box;
-	padding: 16px;
+.page[data-name="walkthrough"] .walkthrough-slide {
+  box-sizing: border-box;
+  padding: 16px;
 }
 
-.page[data-name=walkthrough] .walkthrough-slide .slide-title {
-	font-family: 'Roboto Slab';
-	font-size: 20px;
-	margin: 8px 0;
-	padding: 0 16px;
-	color:#0fc874
+.page[data-name="walkthrough"] .walkthrough-slide .slide-title {
+  font-family: "Roboto Slab";
+  font-size: 20px;
+  margin: 8px 0;
+  padding: 0 16px;
+  color: #0fc874;
 }
 
-.page[data-name=walkthrough] .walkthrough-slide .slide-media {
-	margin: 16px 0;
-	padding: 0 16px;
+.page[data-name="walkthrough"] .walkthrough-slide .slide-media {
+  margin: 16px 0;
+  padding: 0 16px;
 }
 
-.page[data-name=walkthrough] .walkthrough-slide .slide-media img {
-	display: inline-block;
-	height: 144px;
-	width: auto;
+.page[data-name="walkthrough"] .walkthrough-slide .slide-media img {
+  display: inline-block;
+  height: 144px;
+  width: auto;
 }
 
-.page[data-name=walkthrough] .walkthrough-slide .slide-text {
-	font-size: 14px;
-	margin: 8px 0;
-	padding: 0 16px;
+.page[data-name="walkthrough"] .walkthrough-slide .slide-text {
+  font-size: 14px;
+  margin: 8px 0;
+  padding: 0 16px;
 }
 
-.page[data-name=walkthrough] .walkthrough-slide .slide-actions {
-	margin: 16px 0;
-	padding: 0 16px;
+.page[data-name="walkthrough"] .walkthrough-slide .slide-actions {
+  margin: 16px 0;
+  padding: 0 16px;
 }
 
-.page[data-name=walkthrough] .walkthrough-actions {
-	bottom: 0;
-	box-sizing: border-box;
-	left: 0;
-	margin: 16px 0;
-	padding: 0 16px;
-	position: absolute;
-	width: 100%;
-	z-index: 50;
+.page[data-name="walkthrough"] .walkthrough-actions {
+  bottom: 0;
+  box-sizing: border-box;
+  left: 0;
+  margin: 16px 0;
+  padding: 0 16px;
+  position: absolute;
+  width: 100%;
+  z-index: 50;
 }
 
-.page[data-name=walkthrough] .walkthrough-actions a{
-	background:#0fc874 !important;
-	border-radius:20px;
+.page[data-name="walkthrough"] .walkthrough-actions a {
+  background: #0fc874 !important;
+  border-radius: 20px;
 }
 
 .swiper-pagination {
-	bottom: 80px !important;
+  bottom: 80px !important;
 }
 
 /*
@@ -169,74 +171,80 @@
 | Find a ride
 |------------------------------------------------------------------------------
 */
-.page.find-a-ride .card{
-	background:#fff;
+.page.find-a-ride .card {
+  background: #fff;
 }
 
 .page.find-a-ride .page-content {
-	height: 100%;
-	align-items: center;
-	background-color: #0fc874;
-	background-image:url("../assets/img/7178884.png");
-	background-repeat: no-repeat;
-	background-position:50% 100%;
-	background-size:contain;
-	
+  height: 100%;
+  align-items: center;
+  background-color: #0fc874;
+  background-image: url("../assets/img/7178884.png");
+  background-repeat: no-repeat;
+  background-position: 50% 100%;
+  background-size: contain;
 }
 .page.find-a-ride .page-content:before {
-	height: 100%;
-	width:100%;
-	content: '';
-	display: block;
-	left: 0;
-	position: absolute;
-	background: rgba(15,200,119,0.5);
-	top: 0;
-	z-index:1;
-	
+  height: 100%;
+  width: 100%;
+  content: "";
+  display: block;
+  left: 0;
+  position: absolute;
+  background: rgba(15, 200, 119, 0.5);
+  top: 0;
+  z-index: 1;
 }
 .page.find-a-ride .page-content:after {
-	height: 100%;
-	width:100%;
-	content: '';
-	display: block;
-	left: 0;
-	position: absolute;
-	background: rgba(15,200,119,0.5);
-	top: 0;
-	z-index:1;
-	
+  height: 100%;
+  width: 100%;
+  content: "";
+  display: block;
+  left: 0;
+  position: absolute;
+  background: rgba(15, 200, 119, 0.5);
+  top: 0;
+  z-index: 1;
 }
 .page.find-a-ride .page-content .list {
-	align-items: center;
-	text-align: center;
-	z-index:99;
-	margin-top:0
+  align-items: center;
+  text-align: center;
+  z-index: 99;
+  margin-top: 0;
 }
 .page.find-a-ride .page-content .timeline {
-	margin:0
+  margin: 0;
 }
 
-.page.find-a-ride .page-content .findrideBtn{
-	background:#000 !important;
-	border-radius:20px
+.page.find-a-ride .page-content .findrideBtn {
+  background: #000 !important;
+  border-radius: 20px;
 }
 
-.navbar-bg{
-	background:#0fc874 !important;
+.navbar-bg {
+  background: #0fc874 !important;
 }
-.navbar-inner .title, .navbar-inner .link .icon{
-	color:white
+.navbar-inner .title,
+.navbar-inner .link .icon {
+  color: white;
 }
 .timeline-item-inner {
-    border: none;
-    background: transparent;
-	padding:0;
+  border: none;
+  background: transparent;
+  padding: 0;
 }
-.timeline-item-divider{top:24px}
-.timeline-item{padding:0;}
-.item-input:not(.item-input-outline).item-content:before{background:transparent !important}
-.item-input:not(.item-input-outline).item-content:after{height:0}
+.timeline-item-divider {
+  top: 24px;
+}
+.timeline-item {
+  padding: 0;
+}
+.item-input:not(.item-input-outline).item-content:before {
+  background: transparent !important;
+}
+.item-input:not(.item-input-outline).item-content:after {
+  height: 0;
+}
 
 /*
 |------------------------------------------------------------------------------
@@ -244,47 +252,47 @@
 |------------------------------------------------------------------------------
 */
 
-.page[data-name=articles-list] .articles-list {
-	margin: 16px 0;
+.page[data-name="articles-list"] .articles-list {
+  margin: 16px 0;
 }
 
-.page[data-name=articles-list] .articles-list .card {
-	background-color: #F1F2F1;
-	box-shadow: none;
+.page[data-name="articles-list"] .articles-list .card {
+  background-color: #f1f2f1;
+  box-shadow: none;
 }
 
-.layout-dark .page[data-name=articles-list] .articles-list .card {
-	background-color: #333333;
+.layout-dark .page[data-name="articles-list"] .articles-list .card {
+  background-color: #333333;
 }
 
-.page[data-name=articles-list] .articles-list .card-header {
-	flex-direction: column;
-	-webkit-justify-content: flex-end;
-	justify-content: flex-end;
-	padding: 16px;
+.page[data-name="articles-list"] .articles-list .card-header {
+  flex-direction: column;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+  padding: 16px;
 }
 
-.page[data-name=articles-list] .articles-list .card-header.valign-bottom {
+.page[data-name="articles-list"] .articles-list .card-header.valign-bottom {
   -ms-flex-align: start;
   -webkit-align-items: flex-end;
   align-items: flex-start;
-	-webkit-box-align: start;
+  -webkit-box-align: start;
 }
 
-.page[data-name=articles-list] .articles-list .card-content {
-	color: #212121;
+.page[data-name="articles-list"] .articles-list .card-content {
+  color: #212121;
 }
 
-.layout-dark .page[data-name=articles-list] .articles-list .card-content {
-	color: rgba(255, 255, 255, 0.87);
+.layout-dark .page[data-name="articles-list"] .articles-list .card-content {
+  color: rgba(255, 255, 255, 0.87);
 }
 
-.page[data-name=articles-list] .articles-list .article-title {
-	font-size: 13px;
+.page[data-name="articles-list"] .articles-list .article-title {
+  font-size: 13px;
 }
 
-.page[data-name=articles-list] .articles-list .article-categories {
-	margin-top: 4px;
+.page[data-name="articles-list"] .articles-list .article-categories {
+  margin-top: 4px;
 }
 
 /* ===
@@ -309,7 +317,8 @@
   fill: none;
   stroke: #757575;
   stroke-linecap: square;
-  -webkit-animation: preloader-arc 1320ms cubic-bezier(0.8, 0, 0.4, 0.8) infinite;
+  -webkit-animation: preloader-arc 1320ms cubic-bezier(0.8, 0, 0.4, 0.8)
+    infinite;
   animation: preloader-arc 1320ms cubic-bezier(0.8, 0, 0.4, 0.8) infinite;
 }
 @-webkit-keyframes preloader-outer {
@@ -377,8 +386,10 @@
   display: block;
   width: 100%;
   height: 100%;
-  -webkit-animation: preloader-inner-rotate 5.25s cubic-bezier(0.35, 0, 0.25, 1) infinite;
-  animation: preloader-inner-rotate 5.25s cubic-bezier(0.35, 0, 0.25, 1) infinite;
+  -webkit-animation: preloader-inner-rotate 5.25s cubic-bezier(0.35, 0, 0.25, 1)
+    infinite;
+  animation: preloader-inner-rotate 5.25s cubic-bezier(0.35, 0, 0.25, 1)
+    infinite;
 }
 .preloader-inner .preloader-inner-gap {
   position: absolute;
@@ -436,11 +447,17 @@
   -webkit-animation-name: preloader-right-rotate;
   animation-name: preloader-right-rotate;
 }
-.color-multi .preloader-inner .preloader-inner-left .preloader-inner-half-circle {
+.color-multi
+  .preloader-inner
+  .preloader-inner-left
+  .preloader-inner-half-circle {
   -webkit-animation-name: preloader-left-rotate-multicolor;
   animation-name: preloader-left-rotate-multicolor;
 }
-.color-multi .preloader-inner .preloader-inner-right .preloader-inner-half-circle {
+.color-multi
+  .preloader-inner
+  .preloader-inner-right
+  .preloader-inner-half-circle {
   -webkit-animation-name: preloader-right-rotate-multicolor;
   animation-name: preloader-right-rotate-multicolor;
 }
@@ -535,80 +552,80 @@
 @-webkit-keyframes preloader-left-rotate-multicolor {
   0%,
   100% {
-    border-left-color: #4285F4;
+    border-left-color: #4285f4;
     -webkit-transform: rotate(130deg);
   }
   75% {
-    border-left-color: #1B9A59;
-    border-top-color: #1B9A59;
+    border-left-color: #1b9a59;
+    border-top-color: #1b9a59;
   }
   50% {
-    border-left-color: #F7C223;
-    border-top-color: #F7C223;
+    border-left-color: #f7c223;
+    border-top-color: #f7c223;
     -webkit-transform: rotate(-5deg);
   }
   25% {
-    border-left-color: #DE3E35;
-    border-top-color: #DE3E35;
+    border-left-color: #de3e35;
+    border-top-color: #de3e35;
   }
 }
 @keyframes preloader-left-rotate-multicolor {
   0%,
   100% {
-    border-left-color: #4285F4;
+    border-left-color: #4285f4;
     transform: rotate(130deg);
   }
   75% {
-    border-left-color: #1B9A59;
-    border-top-color: #1B9A59;
+    border-left-color: #1b9a59;
+    border-top-color: #1b9a59;
   }
   50% {
-    border-left-color: #F7C223;
-    border-top-color: #F7C223;
+    border-left-color: #f7c223;
+    border-top-color: #f7c223;
     transform: rotate(-5deg);
   }
   25% {
-    border-left-color: #DE3E35;
-    border-top-color: #DE3E35;
+    border-left-color: #de3e35;
+    border-top-color: #de3e35;
   }
 }
 @-webkit-keyframes preloader-right-rotate-multicolor {
   0%,
   100% {
-    border-right-color: #4285F4;
+    border-right-color: #4285f4;
     -webkit-transform: rotate(-130deg);
   }
   75% {
-    border-right-color: #1B9A59;
-    border-top-color: #1B9A59;
+    border-right-color: #1b9a59;
+    border-top-color: #1b9a59;
   }
   50% {
-    border-right-color: #F7C223;
-    border-top-color: #F7C223;
+    border-right-color: #f7c223;
+    border-top-color: #f7c223;
     -webkit-transform: rotate(5deg);
   }
   25% {
-    border-top-color: #DE3E35;
-    border-right-color: #DE3E35;
+    border-top-color: #de3e35;
+    border-right-color: #de3e35;
   }
 }
 @keyframes preloader-right-rotate-multicolor {
   0%,
   100% {
-    border-right-color: #4285F4;
+    border-right-color: #4285f4;
     transform: rotate(-130deg);
   }
   75% {
-    border-right-color: #1B9A59;
-    border-top-color: #1B9A59;
+    border-right-color: #1b9a59;
+    border-top-color: #1b9a59;
   }
   50% {
-    border-right-color: #F7C223;
-    border-top-color: #F7C223;
+    border-right-color: #f7c223;
+    border-top-color: #f7c223;
     transform: rotate(5deg);
   }
   25% {
-    border-top-color: #DE3E35;
-    border-right-color: #DE3E35;
+    border-top-color: #de3e35;
+    border-right-color: #de3e35;
   }
 }
